@@ -41,6 +41,8 @@ AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
 AC_LIB_LTDL
 
+AM_CONDITIONAL(WITH_GNU_LD, test "$with_gnu_ld" = "yes")
+
 #
 # Do we want static modules?
 #
